--- a/sass/components/companies-section/_companies.scss
+++ b/sass/components/companies-section/_companies.scss
@@ -13,6 +13,8 @@
     margin-bottom: 30px;
     @extend %title;
     @media screen and (min-width: $desktop){
+        font-size: 36px;
+        line-height: 1.16;
         margin-bottom: 50px;
     }
 }
@@ -49,7 +51,6 @@
     display: flex;
   justify-content: center;
   align-items: center;
-  width: 170px;
   height: 92px;
   color: $primary-icon-color;
   border: 1px solid $primary-icon-color;
@@ -59,6 +60,9 @@
   &:hover, &:focus{
     border: 1px solid $accent-color;
     color: $accent-color;
+  }
+  @media screen and (min-width: $desktop){
+      width: 170px;
   }
 }
 .companies__icon{
