--- a/sass/components/features-section/_features.scss
+++ b/sass/components/features-section/_features.scss
@@ -69,6 +69,10 @@
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: $title-color;
+    text-align: center;
+    @media screen and (min-width: $tablet){
+        text-align: left;
+    }
 }
 .features__text{
     font-size: 14px;
