--- a/sass/components/footer/_footer-logo.scss
+++ b/sass/components/footer/_footer-logo.scss
@@ -4,21 +4,29 @@
     color: $main-background-color;
     font-family: $second-font;
     font-weight: 700;
-    font-size: 26px; 
-    line-height: 1.19;
+    font-size: 24px; 
+    line-height: 1.16;
     letter-spacing: 0.03em;
     text-decoration: none;
+    @media screen and (min-width: $desktop){
+        font-size: 26px;
+        line-height: 1.19;
+    }
 }
 .address__logo-text{
     color: $main-background-color;
     font-family: $second-font;
     font-weight: 700;
-    font-size: 26px; 
-    line-height: 1.19;
+    font-size: 24px; 
+    line-height: 1.16;
     letter-spacing: 0.03em;
     text-decoration: none;
 
     &--accent{
         color: $accent-color;
+    }
+    @media screen and (min-width: $desktop){
+        font-size: 26px;
+        line-height: 1.19;
     }
 }
