--- a/sass/components/footer/_footer.scss
+++ b/sass/components/footer/_footer.scss
@@ -1,5 +1,5 @@
 .footer{
-    padding: 60px 0 120px 0;
+    padding: 60px 0px;
     background-color: $hero-footer-background;
     @media screen and (min-width: $desktop){
         padding: 60px 0px;
@@ -12,7 +12,7 @@
     @media screen and (min-width: $tablet) and (max-width: 1199px){
         display: flex;
         flex-wrap: wrap;
-        justify-content: center;
+        justify-content: space-around;
         align-items: baseline
     }
     @media screen and (min-width: $desktop){
