--- a/sass/components/footer/_subs.scss
+++ b/sass/components/footer/_subs.scss
@@ -1,5 +1,4 @@
 .subs{
-    height: 86px;
     @media screen and (min-width: $tablet) and (max-width: 1199px){
         text-align: center;
     }
@@ -27,7 +26,7 @@
     }
 }
 .subs__input{
-    margin-bottom: 20px;
+   
     max-width: 100%;
     height: 50px;
     background-color: $hero-footer-background;
@@ -37,6 +36,9 @@
     cursor: pointer;
     @media screen and (min-width: $mobile){
         width: 450px;
+    }
+    @media screen and (max-width: 1199px){
+        margin-bottom: 20px;
     }
     @media screen and (min-width: $desktop){
         width: 358px;
