--- a/sass/components/header/_menu.scss
+++ b/sass/components/header/_menu.scss
@@ -4,8 +4,8 @@
     @media screen and (max-width: 767px){
         display: none;
         position: absolute;
-        z-index: 999;
-        top: 100%;
+        z-index: 998;
+        top: 0;
         left: 0;
         width: 100%;
         height: 796px;
@@ -41,6 +41,12 @@
     cursor: pointer;
     @media screen and (min-width: $tablet){
         display: none;
+    }
+    &.is-open{
+        position: absolute;
+    top: 3px;
+    right: 15px;
+    z-index: 999;
     }
 }
 .menu__button .icon__cross{
