--- a/sass/components/hero/_form.scss
+++ b/sass/components/hero/_form.scss
@@ -58,7 +58,7 @@
     cursor: pointer;
     padding-top: 12px;
     padding-left: 16px;
-    width: 370px;
+    max-width: 370px;
     resize: none;
     border-radius: 4px;
     border: 1px solid rgba(33, 33, 33, 0.2);
