--- a/sass/components/hero/_hero.scss
+++ b/sass/components/hero/_hero.scss
@@ -8,18 +8,8 @@
   padding: 118px 0;
   margin-right: auto;
   margin-left: auto;
-  
-  @media screen and (max-width: 767px){
-        max-width: 480px;
-        background-position: center;
-        background-size: cover;
-        background-repeat: no-repeat;
-  }
-  @media screen and (min-width: $tablet){
-      max-width: 768px;
-  }
+  max-width: 1600px;
   @media screen and (min-width: $desktop){
-      max-width: 1600px;
       padding: 200px 0;
   }
 }
@@ -65,6 +55,11 @@
     color: $main-background-color;
     margin-bottom: 30px;
     max-width: 360px;
+    @media screen and (min-width: $desktop){
+        font-size: 44px;
+        line-height: 1.36;
+        max-width: 696px;
+    }
 }
 .hero__button{
     display: flex;
