--- a/sass/components/hero/_modal.scss
+++ b/sass/components/hero/_modal.scss
@@ -13,20 +13,27 @@
     }
 }
 .modal{
-    position: absolute;
-    top: 50%;
-    left: 50%;
+    width: 100%;
+    height: 100%;
+    margin-right: auto;
+    margin-left: auto;
     padding: 40px;
-
     max-width: 450px;
     height: 581px;
     background-color: #fff;
     border-radius: 4px;
 
+    
+    @media screen and (min-width: $mobile){
+        position: absolute;
+    top: 50%;
+    left: 50%;
+    padding: 40px;
     transform: translate(-50%,-50%) scale(1);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     .backdrop.is-hidden &{
         transform: translate(-50%, -50%) scale(1.1);
+    }
     }
     @media screen and (min-width: $tablet) and (max-width: 1199px) {
         height: 609px;
