--- a/sass/components/portfolio/_buttons.scss
+++ b/sass/components/portfolio/_buttons.scss
@@ -1,18 +1,23 @@
 .button__list{
     display: flex;
     justify-content: flex-start;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
     list-style: none;
     @media screen and (max-width: 767px){
         flex-wrap: wrap;
     }
-    @media screen and (min-width: $tablet) and (max-width: 1199px){
+    @media screen and (min-width: $tablet){
         justify-content: center;
+    }
+    @media screen and (min-width: $desktop){
+        margin-bottom: 50px;
     }
 }
 .button__item{
     &:first-child{
-        margin-bottom: 15px;
+        @media screen and (max-width: 767px){
+            margin-bottom: 15px;
+        }
     }
     &:nth-child(3){
         @media screen and (max-width: 479px){
