--- a/sass/components/portfolio/_gallery.scss
+++ b/sass/components/portfolio/_gallery.scss
@@ -1,5 +1,8 @@
 .gallery{
-    @extend %section;
+    padding: 60px 0;
+    @media screen and (min-width: $desktop){
+        padding: 94px 0;
+    }
 }
 .gallery__title{
     &--hide{
@@ -10,7 +13,7 @@
     display: flex;
     flex-wrap: wrap;
     list-style: none;
-    @media screen and (min-width: $tablet) and (max-width: 1199px){
+    @media screen and (min-width: $tablet){
         margin: -15px;
     }
 }
@@ -18,6 +21,9 @@
     @media screen and (max-width: 767px){
         max-width: 450px;
         margin-bottom: 30px;
+        &:last-child{
+            margin-bottom: 0;
+        }
     }
     @media screen and (min-width: $tablet) and (max-width: 1199px){
         max-width: 354px;
