--- a/sass/components/team-section/_card.scss
+++ b/sass/components/team-section/_card.scss
@@ -13,7 +13,7 @@
 .card__img{
     display: block;
    width: 100%;
-   height: 100%;
+   height: auto;
 }
 .card__text-container{
     padding-top: 30px;
