--- a/sass/components/team-section/_card.scss
+++ b/sass/components/team-section/_card.scss
@@ -1,6 +1,6 @@
 .card__icon-container{
     width: 450;
-    height: 460px;
+    // height: 460px;
     @media screen and (min-width: $tablet){
         width: 354px;
         height: 374px;
