--- a/css/main.css
+++ b/css/main.css
@@ -1126,7 +1126,7 @@ h1, h2, h3, h4, h5, h6, p, ul {
 
 @media screen and (min-width: 1200px) {
   .form__textarea {
-    width: 448px;
+    max-width: 448px;
   }
 }
 
